--- a/index.html
+++ b/index.html
@@ -169,6 +169,39 @@
 
     </section>
 
+    <section id="container-cofre">
+    
+    <div>
+        <img src="imagens/OIP caixa a noite.jpeg" alt="">
+
+    </div>
+
+    <div>
+        <h2>seus dados estâo conosco</h2>
+
+        <p>atençao o seus dados estao conosco, ou seja vamos usar o seu cartao e dinheiro mais nâo se preucupe que vamos retorna para sua conta poupança.</p>
+
+    </div>
+
+
+    </section>
+
+
+    <footer>
+    <img src="imagens/th footer.jpeg" alt="loading laze">
+
+    <div>
+        <p>confira se a sua conta esta com algum saldo, se estiver mais de 100 mil reias por favor entre em contato com o ceu da empresa wesley</p>
+
+        <a href="">CONTA BANCARIA DA PESSOA</a>
+    </div>
+
+
+
+
+
+    </footer>
+
 
     
 </body>
